user-service/src/main/java/com/example/user_service/Errors/custom/InvalidJwtTokenException.java
package com.example.user_service.Errors.custom;

public class InvalidJwtTokenException extends RuntimeException {
    public InvalidJwtTokenException(String message) {
        super(message);
    }
}
